fix layout issue

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,4 +3,6 @@
 html, body {
   margin: 0;
   padding: 0;
+  scrollbar-width: thin;
+  scrollbar-color: white #1e293b;
 }
